# TARA_Final_Project

./: .gitignore  CHECKPOINTS.md  LICENSE  README.md  TARA_Project_Summary_for_Slides.md  TARA_Project_Walkthrough.md  pyproject.toml
checkpoints/grpo_vanilla/: README.md
papers/: README.md
results/eval_mc/: base.json  grpo_mitigated_lam1.json  grpo_vanilla.json
results/eval_sycophancy/: base.json  grpo_mitigated_lam1.json  grpo_vanilla.json  paired_prob.json
results/phase2_tilt/: summary.json  tilts.jsonl
results/phase3_bon/: bon_curves.json
scripts/: 00_setup.sh  00_setup_check.py  01_build_dataset.py  02_tilt_measurement.py  03_bon_sweep.py  04_grpo_train.py  05_mitigation_sweep.py  06_make_figures.py  cloud_bootstrap.sh  cloud_provision_fresh.sh  cloud_sync.sh  compare_sycophancy.py  eval_mc.py  eval_sycophancy.py  eval_sycophancy_prob.py  inspect_agreement.py  make_fig3.py  orchestrator.sh  orchestrator_extended.sh
src/: __init__.py  config.py
src/analysis/: figures.py
src/bon/: agreement.py  curve.py  generate.py  score.py  tilt.py
src/data/: belief_injection.py  few_shot.py  sycophancy_eval.py  truthfulqa.py
src/eval/: kl.py  mc.py  run_mc.py  sycophancy_rate.py
src/grpo/: dataset.py  reward_fn.py  train.py
src/models/: policy.py  reward.py
