[project]
name = "tara-sycophancy"
version = "0.1.0"
description = "Empirical verification of Shapira et al. (2026) RLHF sycophancy covariance theorem on Llama-3.2-1B Base."
requires-python = ">=3.10,<3.13"
authors = [{ name = "Grigor Crandon" }]

dependencies = [
    "torch>=2.4",
    "transformers>=4.45,<5",
    "datasets>=2.20,<5",
    "accelerate>=1.0",
    "huggingface_hub>=0.25",
    "safetensors>=0.4",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "jsonlines>=4.0",
    "tenacity>=9.0",
]

[project.optional-dependencies]
local = [
    "mlx>=0.18; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "mlx-lm>=0.18; sys_platform == 'darwin' and platform_machine == 'arm64'",
]
cloud = [
    # TRL 1.x reorganized the GRPOTrainer API; pin a narrow band we know works
    # with our reward_funcs=, processing_class=, num_generations=, beta= kwargs.
    "trl>=0.18,<1.5",
    "peft>=0.13",
    "bitsandbytes>=0.44",
    "wandb>=0.18",
]
dev = [
    "ruff>=0.6",
    "pytest>=8.3",
    "ipykernel>=6.29",
    "jupyterlab>=4.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
